k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-api
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-api
  template:
    metadata:
      labels:
        app: social-api
    spec:
      containers:
        - name: social-api
          image: ghcr.io/1000bang/social:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: social-api-svc
  namespace: default
spec:
  selector:
    app: social-api
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
