k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-postgres
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-postgres
  template:
    metadata:
      labels:
        app: social-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: social-postgres-data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
      volumes:
        - name: social-postgres-data
          persistentVolumeClaim:
            claimName: social-postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: social-postgres
  namespace: default
spec:
  selector:
    app: social-postgres
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
