k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: social.1000bang.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-api-svc
                port:
                  number: 80
